feat: add sign up page

--- a/src/components/WelcomePizza/WelcomePizza.scss
+++ b/src/components/WelcomePizza/WelcomePizza.scss
@@ -1,16 +1,63 @@
 .welcome-pizza {
     position: relative;
 
-    width: clamp(350px, 70vw, 500px);
-    height: clamp(450px, 60dvh, 500px);
-
-    @media screen and (max-width: 425px) {
-        width: clamp(100px, 85vw, 350px);
-        height: clamp(100px, 50dvh, 350px);
-    }
+    width: 320px;
+    height: 320px;
 
     background-image: url('/images/welcome-pizza.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+
+    &::before {
+        content: '';
+
+        position: absolute;
+
+        background-image: url('/images/twinkle.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+
+        top: 100px;
+        left: 60px;
+        width: 20px;
+        height: 20px;
+
+        animation: twinkle 5s ease-in infinite;
+    }
+
+    &::after {
+        content: '';
+
+        position: absolute;
+
+        background-image: url('/images/twinkle.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+
+        top: 140px;
+        right: 60px;
+        width: 20px;
+        height: 20px;
+
+        animation: twinkle 5s ease-in infinite;
+    }
+}
+
+@keyframes twinkle {
+    0% {
+        scale: 1.1;
+    }
+
+    50% {
+        transform: translateY(-60%);
+        scale: 0.85;
+    }
+
+    100% {
+        transform: translateY(0%);
+        scale: 1.1;
+    }
 }
