--- a/src/components/PasswordInput/PasswordInput.scss
+++ b/src/components/PasswordInput/PasswordInput.scss
@@ -9,6 +9,7 @@
         box-sizing: border-box;
         display: block;
         padding: 10px 40px 10px 20px;
+        background-color: white;
         border: 3px solid $border-color;
         width: 100%;
         box-shadow: $shadow-color 5px 5px 0px;
